--- a/_posts/2015-10-09-awesome-初体验.md
+++ b/_posts/2015-10-09-awesome-初体验.md
@@ -22,6 +22,7 @@ sudo apt-get install tmux
 {% endhighlight %}
 
 ## gnome-do ##
+
 `gnome-do`又是一款神一般的应用程序起动器，随时随地只有点击`Super+Space`调出`gnome-do`输入想要打开应用程序的几个字母就可以调用相应程序，而且不仅仅是应用程序，还支持多种用户创建的内容，几乎是`everything`。
 安装也很简单
 
@@ -31,3 +32,37 @@ sudo apt-get install gnome-do
 
 但这里有个问题是，当我在Ununtu 15.10下调用`gnome-do`(版本是0.95.3)时，点击`首选项`会自动退出，因此没法修改默认的快捷键，郁闷。求大神能来解答下什么原因。
 
+## Awesome ##
+
+当使用 `Awesome` 的时候，给我的感觉确实如其名所示, Awesome，不仅仅是他的美观，更主要的是他的高效性。
+
+一开始不明白什么是所谓的平铺式窗口管理，原来不是相互重叠一起的便是平铺了，不过确实，平铺式管理要比折叠式的窗口管理方便的多，首先就是不用再`Alt+Tab`的切来切去的了，不过当然，前提是你的显示屏要得足够的大才行。
+
+下边来秀一下自己的桌面吧。
+
+![awesome-screen]({{ site.baseurl }}/img/awesome_screen.jpg)
+
+不说有多酷，起码看着是非常舒服的。主题用的是[@mikar](https://github.com/mikar/)的vinyl主题,将终端背景设置成透明就OK了。
+
+其实，还有这样的效果图。
+
+![awesome-multi-screen]({{ site.baseurl }}/img/awesome_multi.png)<small>Source: [Unbuntu中文](http://wiki.ubuntu.org.cn/awesome)</small>
+
+简直是酷毙了，`awesome`对多屏幕的兼容也是浑然天成。只需要`Ctrl+Super+j/k`便可来回切换使用屏幕，完全可以把鼠标扔掉了！
+
+Awesome的安装其实也是非常简单的。
+
+{% highlight bash %}
+sudo apt-get install awesome
+{% endhighlight %}
+
+然后我们需要在`home/`下的`.config/`文件夹中新建一个`awesome`的文件夹,将`/etc/xdg/awesome/rc.lua`配置文件copy其中就可以了。具体的配置我也不多说了，网上依旧是好多文献。哦，对了，这样安装的是awesome3.4版，如果想安装3.5的就得自己下载源码编译了。
+
+下面列出相关资源，用来方便查找。
+
+* [Awesome官网](http://awesome.naquadah.org)
+* [ubuntu中文下的Awesome文档](http://wiki.ubuntu.org.cn/Awesome)
+* [archlinux下的Awesome中文文档](https://wiki.archlinux.org/index.php/awesome_(简体中文))
+* [pre 3.5主题 --mikar](https://github.com/mikar/awesome34-themes)
+* [3.5主题 --mikar](https://github.com/mikar/awesome-themes)
+* [3.5主题 --Morley93](https://github.com/Morley93/awesome-themes-3.5)
