--- a/_posts/2015-10-10-Awesome-锁屏.md
+++ b/_posts/2015-10-10-Awesome-锁屏.md
@@ -50,6 +50,14 @@ awful.key({ modkey, "Control" }, "Delete", function () awful.util.spawn('xscreen
 xscreensaver -nosplash &
 {% endhighlight %}
 
-通过添加`-nosplash`参数可以去掉启动程序的等待时间出现的logo，世界一下子就清净过了。
+通过添加`-nosplash`参数可以去掉启动程序的等待时间出现的logo，世界一下子就清净多了。
+
+哦，对了，如果遇到启用`gnome-settings-daemon`时发现鼠标指针不见的情况下，输入以下命令。
+
+{% highlight bash linenos %}
+gsetting set org.gnome.settings-daemon.plugins.cursor active false
+{% endhighlight %}
+
+完成！
 
 Ps. 总结一下，这次安装屏保的过程又折腾了好久，主要因素是由于自己的大意好多命令给拼错了，导致很多莫名奇妙的问题，如`gnome-settings-daemon`成了`gnome-setting-daemon`，`xscreensvaer`又成了`xscreen-saver`，切记不要太粗心!
