--- a/_posts/2015-10-12-持久化ssh连接.md
+++ b/_posts/2015-10-12-持久化ssh连接.md
@@ -48,4 +48,4 @@ IdentityFile ~/.ssh/id_rsa2
 > `ControlPersist 4h` 表示在创建的首个连接(master connection)的会话推出后，master连接仍然在后台保留，以便其他复用该连接的会话不会出现问题。
 > <small>— [@李林克斯 《重用SSH连接》](http://liyangliang.me/posts/2015/03/reuse-ssh-connection/)</small>
 
-难怪，由于的我的`ControlMaster`配置没哟在哪个`Host`下，因此对全局生效，况且`github`的user都是`git`，所以导致每次验证的都是`master`的连接，难怪会出现问题。看来以后遇到问题后不能什么都不懂直接Copy，因为接下来总会有莫名其妙的问题等着你。
+难怪，由于的我的`ControlMaster`配置没有在哪个`Host`下，因此对全局生效，况且`github`的user都是`git`，所以导致每次验证的都是`master`的连接，难怪会出现问题。看来以后遇到问题后不能什么都不懂直接Copy，因为接下来总会有莫名其妙的问题等着你。
