--- a/_posts/2015-10-12-持久化ssh连接.md
+++ b/_posts/2015-10-12-持久化ssh连接.md
@@ -43,9 +43,9 @@ IdentityFile ~/.ssh/id_rsa2
 
 再一次进行`ssh`测试User2的连接情况，奇迹发生了，终于出现`Hi, User2`了，但这时`ssh`User1也成了`Hi, User2`，突然想起来是不是`config`里前三行搞的鬼？然后继续问谷歌吧。
 
-> `ControlMaster auto` 告诉ssh客户端尝试重用现有的连接(master connection)。
-> `ControlPath` 指定了这个连接的socket保存位置，这里保存在`/tmp`路径下，以便重启后便删除了，实际放在其他地方也可以。文件名中%h表示远程主机名(host)，%p表示端口(port)，%r表示远程用户名(remote user name)。文件可随时`rm`掉然后重新连接。
-> `ControlPersist 4h` 表示在创建的首个连接(master connection)的会话推出后，master连接仍然在后台保留，以便其他复用该连接的会话不会出现问题。
-> <small>— [@李林克斯 《重用SSH连接》](http://liyangliang.me/posts/2015/03/reuse-ssh-connection/)</small>
+> * `ControlMaster auto` 告诉ssh客户端尝试重用现有的连接(master connection)。
+> * `ControlPath` 指定了这个连接的socket保存位置，这里保存在`/tmp`路径下，以便重启后便删除了，实际放在其他地方也可以。文件名中%h表示远程主机名(host)，%p表示端口(port)，%r表示远程用户名(remote user name)。文件可随时`rm`掉然后重新连接。
+> * `ControlPersist 4h` 表示在创建的首个连接(master connection)的会话推出后，master连接仍然在后台保留，以便其他复用该连接的会话不会出现问题。
+> * <small>— [@李林克斯 《重用SSH连接》](http://liyangliang.me/posts/2015/03/reuse-ssh-connection/)</small>
 
 难怪，由于的我的`ControlMaster`配置没有在哪个`Host`下，因此对全局生效，况且`github`的user都是`git`，所以导致每次验证的都是`master`的连接，难怪会出现问题。看来以后遇到问题后不能什么都不懂直接Copy，因为接下来总会有莫名其妙的问题等着你。
