--- a/_posts/2015-10-13-Redis大冒险.md
+++ b/_posts/2015-10-13-Redis大冒险.md
@@ -1,7 +1,8 @@
 ---
 title: Redis大冒险
+date: 2015-10-13
 categories: 数据库
-tags: [转载, 译文, Redis, NoSQL]
+tags: [转载, 译文, Redis, NoSQL, Code]
 cover-image: 9.jpg
 ---
 最近在搞一组实验，但数据用mysql存储的话好多数据项是不定长的，于是决定改用Redis。看到关于Redis简介的一篇很好的文章，特此转载过来。
