--- a/_posts/2015-10-21-Redis-初体验.md
+++ b/_posts/2015-10-21-Redis-初体验.md
@@ -19,7 +19,7 @@ Redis 最主要的特点是其丰富的数据类型，创始人 Salvatore Sanfil
 
 当然，Redis常见的还是出现在Web Case中，如博客网站或其他类似的社交网站，这里有个[《11个Redis常用Web Case》](http://highscalability.com/blog/2011/7/6/11-common-web-use-cases-solved-in-redis.html)。
 至于Redis内容相关，这里的[关于Redis的一些常识](http://www.searchdatabase.com.cn/showcontent_70423.htm)，也提供了一些Redis的相关资料。
-不过不管学习什么，有文档最好参考文档，毕竟文档才是王道，[Redis命令参考](http://redisdoc.cn)，中文版的，简洁易懂。
+不过不管学习什么，有文档最好参考文档，毕竟文档才是王道，[Redis命令参考](http://redisdoc.com)，中文版的，简洁易懂。
 发现自己学了这么多年英语，最后还是喜欢看中文文档————除非翻译的实在看不下去。
 这里还有[Redis中文网站](http://redis.cn)。
 
