change pipe and redirection

--- a/_posts/2015-10-27-Linux管道与重定向.md
+++ b/_posts/2015-10-27-Linux管道与重定向.md
@@ -72,6 +72,9 @@ $cat file2
 test1 test2 test3
 {% endhighlight %}
 
+而在一般的Linux tricks 有时候会利用`tee`来帮忙解决vim时忘记加`sudo`。可以这样子使用`:w !sudo tee %`。其中`:w`将更改后的文件作为标准输出传递给tee，
+而`%`代表当前文件名，然后利用`sudo`权限把标准输出传到当前文件中去。
+
 ### 输入重定向 ###
 
 输入重定向自己平常到用的不多，可以用`<`来接受文件内容来作为标准输入。
