--- a/_posts/2015-11-10-有关Javac的探究.md
+++ b/_posts/2015-11-10-有关Javac的探究.md
@@ -49,9 +49,70 @@ where possible options include:
 ```
 看着都眼晕，不过我们只需要对某几个Option来关注就可以。
 
-### -classpath ###
+### @argfiles ###
 
-这是个设定java要搜索的类的路径，参考@haolujun 大神的说明，java的类的寻找规则是这样子的：
+话说用了这么久的`javac`还头一次知道有这么个`option`，在javac编译的时候我们可以不必每次都要
+敲那么长的一串命令，可以先通过把编译的`option`或是`sourcefiles`写入到一个文件中然后通过`@`来编译。
+比如说，我们把`javac`的参数放到options文件中，把`sourcefile`放到source文件中，类似下边例子：
+
+{% highlight vim %}
+#Options
+-d ../bin/
+-g
+-sourcepath .
+{% endhighlight %}
+
+{% highlight vim %}
+#srcFiles
+testA.java
+testB.java
+{% endhighlight %}
+
+之后，通过命令`javac @Options @srcFiles`来编译文件。
+
+### -classpath 与 -sourcepath ###
+
+`classpath` 设定java要搜索的类的路径，即编译`sourcefile`所需要依赖的class的路径。
+
+`sourcepath` 设定java要搜索类的源码的路径，即编译`sourcefile`所需要依赖的class的源码的路径。
+
+一开始并不明白sourcepath的意义，以为是需要编译的源码的路径。后来看了看文档以及相关资料，才知道
+sourcepath与classpath其实都是指要编译文件需要搜寻的依赖类的路径。只不过classpath指明的是已经编译好的
+`.class`文件的位置，而sourcepath指明的是依赖的class的源码的位置，如果`javac`发现不存在或者现在的`.class`
+不是最新版文件，会重新编译依赖文件来产生class文件。
+
+我们可以通过`-verbose`来查看编译过程。
+
+{% highlight bash %}
+$javac -verbose -sourcepath . testB.java
+[解析开始时间 RegularFileObject[testB.java]]
+[解析已完成, 用时 14 毫秒]
+[源文件的搜索路径: .]
+[类文件的搜索路径: /lib/jvm/jdk7/jre/lib/resources.jar,/lib/jvm/jdk7/jre/lib/rt.jar,/lib/jvm/jdk7/jre/lib/sunrsasign.jar,/lib/jvm/jdk7/jre/lib/jsse.jar,/lib/jvm/jdk7/jre/lib/jce.jar,/lib/jvm/jdk7/jre/lib/charsets.jar,/lib/jvm/jdk7/jre/lib/jfr.jar,/lib/jvm/jdk7/jre/classes,/lib/jvm/jdk7/jre/lib/ext/zipfs.jar,/lib/jvm/jdk7/jre/lib/ext/sunpkcs11.jar,/lib/jvm/jdk7/jre/lib/ext/localedata.jar,/lib/jvm/jdk7/jre/lib/ext/dnsns.jar,/lib/jvm/jdk7/jre/lib/ext/sunec.jar,/lib/jvm/jdk7/jre/lib/ext/sunjce_provider.jar,.,/lib/jvm/jdk7/lib.tools.jar,/home/yeoman123/Workspace/java/MOECPM,/home/yeoman123/Workspace/java/public/colt-1.2.0.jar,/home/yeoman123/Workspace/java/public/slf4j-api-1.7.12.jar]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/lang/Object.class)]]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/lang/String.class)]]
+[正在检查testB]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/lang/AutoCloseable.class)]]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/lang/System.class)]]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/io/PrintStream.class)]]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/io/FilterOutputStream.class)]]
+[正在加载ZipFileIndexFileObject[/lib/jvm/jdk7/lib/ct.sym(META-INF/sym/rt.jar/java/io/OutputStream.class)]]
+[正在加载RegularFileObject[./testA.java]]
+[解析开始时间 RegularFileObject[./testA.java]]
+[解析已完成, 用时 1 毫秒]
+[已写入RegularFileObject[testB.class]]
+[正在检查testA]
+[已写入RegularFileObject[./testA.class]]
+[共 307 毫秒]
+{% endhighlight %}
+
+其中文件`testB.java`里边对`testA.java`里的类进行调用，然而并没有事先编译`testA.java`文件，而是指定了`sourcepath`为
+当前目录，我们可以看到编译进程中首先找到`testA.java`对其进行编译生成`testA.class`，然后再对`testB.java`进行编译。
+
+需要注意的是：`sourcepath`的默认路径与`classpath`路径相同，但如果指定了之后会将原路径覆盖。
+
+另外，关于classpath的搜索规则，参考@haolujun 大神的说明，java的类的寻找规则是这样子的：
+
 ```
 class文件所在目录=Classpath+'\'+Package路径中'.'换成'\'
 ```
