--- a/_posts/2015-11-10-有关Javac的探究.md
+++ b/_posts/2015-11-10-有关Javac的探究.md
@@ -111,8 +111,48 @@ $javac -verbose -sourcepath . testB.java
 
 需要注意的是：`sourcepath`的默认路径与`classpath`路径相同，但如果指定了之后会将原路径覆盖。
 
+### -d ###
+
+`-d`选项设定了类文件的目标目录，即你编译出来的class文件所存放的位置，这里是指存放的根目录。什么意思呢？如果你的文件中没有进行打包(package)
+那么直接就把class文件生成到该目录下边。如果文件中声明了package的信息，那么就会以`-d`后的path为根目录生成整个package的文件目录中。举个例子
+
+{% highlight java %}
+package cn.edu.school.group.project;
+public class testA{
+    //...
+}
+{% endhighlight %}
+
+{% highlight bash %}
+$ javac -d /home/user/java/bin/ testA.java
+{% endhighlight %}
+
+之后会将`testA.class`生成到/home/user/java/bin/cn/edu/school/group/project中。如果想要`import`该类，则需要指定
+该类的根目录，即`-cp /home/user/java/bin`即可。例如我在`testB`中`import`：
+
+{% highlight java%}
+import cn.edu.school.group.project.testA;
+public class testB{
+    public testB{
+        System.out.println("This is B Initialize");
+    }
+    public static void main(String[] args){
+        testA ta = new testA();
+    }
+}
+{% endhighlight %}
+
+{% highlight bash%}
+$ javac -d /home/user/java/bin -cp /home/user/java/bin testB.java
+{% endhighlight %}
+
+如果不指定`cp`的话就会编译出错，或者将该目录添加到环境变量中其实也可以，但如果每个project都把classpath添加到环境变量中，
+那环境变量会变得相当臃肿。
+
 另外，关于classpath的搜索规则，参考@haolujun 大神的说明，java的类的寻找规则是这样子的：
 
 ```
 class文件所在目录=Classpath+'\'+Package路径中'.'换成'\'
 ```
+
+
