--- a/_posts/2015-11-10-有关Javac的探究.md
+++ b/_posts/2015-11-10-有关Javac的探究.md
@@ -154,5 +154,13 @@ $ javac -d /home/user/java/bin -cp /home/user/java/bin testB.java
 ```
 class文件所在目录=Classpath+'\'+Package路径中'.'换成'\'
 ```
+### debug 选项 ###
 
+`-g`选项为编译提供了调试信息，包括行号信息，源文件信息以及局部变量信息。缺省情况只生成行号以及源文件信息。
 
+`-g:none` 不生成任何调试信息。
+
+`-g:{keylist}` 指定生成调试信息的类型，`keylist`包括`source`提供源文件调试信息，`lines`提供行号调试信息，以及
+`vars`提供局部变量调试信息。类型之间用逗号来分隔。
+
+如果你不想生成任何调试信息的话，需要`-g:none`来指定，不指定的话，即使不加`-g`默认也会生成行号以及源文件信息的。
