add blog about offer

--- a/_posts/2016-10-04-找工作的那些事儿.md
+++ b/_posts/2016-10-04-找工作的那些事儿.md
@@ -654,6 +654,7 @@ C/C++方向：
 # 写在最后 #
 
 折腾一天，总算把零零散散的面经总结了一些。
+一总结才发现，自己的校招也经历过这么多笔试面试，也可谓是经历了不少艰难险阻了。
 话说这两个月忙着找工作也没什么机会来更新博客，接下来博客还是要更的。
 做人要有始有终才是对的。
 
